--- a/pom.xml
+++ b/pom.xml
@@ -95,8 +95,14 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
-        
-    </dependencies>
+       <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+<dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    <version>2.7.0</version>
+</dependency>
+
+            </dependencies>
 
     <build>
         <plugins>
