--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=${datasource.password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.ssl=true
 server.port=8080
+server.address=0.0.0.0
 
 
 # Hibernate JPA Configuration
